gitops/infra-custom/obsidian-livesync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: obsidian-livesync
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: obsidian-livesync
