gitops/infra-custom/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync
  namespace: obsidian-livesync
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: obsidian-livesync
    app.kubernetes.io/part-of: obsidian-livesync
spec:
  selector:
    app.kubernetes.io/name: obsidian-livesync
  ports:
    - name: http
      port: 5984
      targetPort: http
